--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#visao">aboute</a></li>
-                <li><a href="./cursos.html">Treinamento</a></li>
+                <li><a href="./cursos.html">Treinamentos</a></li>
             </ul>
         </nav>
     </header>
