--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#visao">aboute</a></li>
+                <li><a href="#visao">about</a></li>
                 <li><a href="./cursos.html">Treinamentos</a></li>
             </ul>
         </nav>
