--- a/cursos.html
+++ b/cursos.html
@@ -40,8 +40,19 @@
                         <a href="#" target="_blank" ><img id="imgprojeto" src="assets/apexbet.png" alt="projeto bealtybook"/></a>
                         <div id="info">
                             <h2>Criando uma casa de apostas com javaScript</h2>
-                            <p style="color: red;">Embreve </p>
-                            <a href="#">Adquirir Treinamento</a>
+                            <p>
+                                Fala dev, seja muito bem vindo ao nosso curso 
+                                “Criando uma casa de aposta com javaScript” neste 
+                                curso vamos aprender a criar um casa de apostas 
+                                onde seus jogos tem toda sua funcionalidade no 
+                                lado do cliente, este curso foi desenvolvido pensando 
+                                em todos os públicos desde o  iniciante até o avançado
+                                se você não  tem nenhum conhecimento em programação 
+                                não se preocupe nossa didática  foi planejada em cada 
+                                detalhe para que você consiga desenvolver essa 
+                                aplicação junto a nossa equipe. 
+                            </p>
+                            <a href="./vendaApexBet/index.html">Adquirir Treinamento</a>
                         </div>
                     </div>
                     <div class="project" id="project4">
