--- a/vendaApexBet/index.html
+++ b/vendaApexBet/index.html
@@ -7,8 +7,9 @@
     <title>Criando uma casa de Apostas Com javaScript</title>
     <script>
         function Redirect(){
-            window.location.href = "/#sobre";
-        };
+            window.location.href = "#sobre";
+        }; 
+
         function Curso(){
             window.location.href = "https://pay.kiwify.com.br/35aNl2k";
         };
