--- a/cursos.html
+++ b/cursos.html
@@ -68,7 +68,7 @@
                                 Realize operações de banco de dados de forma eficiente com Knex.js
                                 Desenvolva habilidades práticas enquanto constrói um sistema de cadastro de pessoas 
                             </p>
-                            <a href="https://pay.kiwify.com.br/DoJaBEO">Adquirir Treinamento</a>                            
+                            <a href="./Curso-de-nodejs-main/index.html">Adquirir Treinamento</a>                            
                         </div>
                     </div>
                     <!-- Adicione mais projetos conforme necessário -->
