update in this poage
update in this page

--- a/Curso-de-nodejs-main/index.html
+++ b/Curso-de-nodejs-main/index.html
@@ -62,18 +62,12 @@
     </section>
     <!-- Rodapé -->
     <footer>
-        <div class="footer-left">
-            © 2024 <VmSoftware/>. Todos os direitos reservados.
-            <p>#NodeJS 
-                <br/>#DesenvolvimentoWeb 
-                <br/>#AprendaProgramação 
-                <br/>#CursoOnline
-            </p>
-        </div>
         <div class="footer-right">
             <br/>
+            © 2024 <VmSoftware/>. Todos os direitos reservados.
             <br/>
-            <a href="#" target="_blank"><img src="./instagram.png" alt="logo"/></a>
+            <br/>
+            <a href="https://www.instagram.com/vm_software/" target="_blank"><img src="./instagram.png" alt="logo"/></a>
             <a href="#" target="_blank"><img src="facebook.png" alt="logo"/></a>
         </div>
     </footer>
