--- a/vendaApexBet/index.html
+++ b/vendaApexBet/index.html
@@ -1,84 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css"/>
-    <title>Criando uma casa de Apostas Com javaScript</title>
-    <script>
-        function Redirect(){
-            window.location.href = "#sobre";
-        }; 
-
-        function Curso(){
-            window.location.href = "https://pay.kiwify.com.br/35aNl2k";
-        };
-    </script>
+    <link rel="stylesheet" href="./style.css">
+    <title>Criando uma Casa DE Apostas | ApexBet</title>
 </head>
 <body>
+    <!-- Cabeçalho -->
     <header>
+        <h1></h1>
     </header>
-    <nav>
-        <ul>
-            <li>
-                <a href="#home">Home</a>
-                <a href="#sobre">Sobre</a>
-                <a href="#comprar">Comprar</a>
-            </li>
-        </ul>
-    </nav>
-    <section id="home">
-        <div id="conteudoHome">
-            <div id="txtHome">
-                <h1 id="primary">
-                    Transforme Seu Potencial, 
-                    Crie Sua Casa de Apostas e Conquiste o Inimaginável
-                </h1>
-                <p id="secund">
-                    Toque no Botão 
-                    e Explore as Maravilhas do Nosso Curso!</p>
-                <button onclick="Redirect()" type="submit" id="btnHome"><a>Conheça nosso curso</a></button>
-            </div>
-            <div id="imgHome">
-                <img id="propHome" src="./image/Post de Instagram animado azul flat para loja de informática.png" alt="propganda curso">
-            </div>
-        </div>
-    </section>
-    <section id="sobre">
-        <div id="conteinerAbout">
-            <div id="txtAbout">
-                <p id="textoAbout">
-                    Fala dev, seja muito bem vindo ao nosso curso 
-                    “Criando uma casa de aposta com javaScript” 
-                    neste curso vamos aprender a criar um casa 
-                    de apostas onde seus jogos tem toda sua funcionalidade no 
-                    lado do cliente, este curso foi desenvolvido pensando em todos os 
-                    públicos desde o  iniciante até o avançado se você não  tem 
-                    nenhum conhecimento em programação não se preocupe nossa 
-                    didática  foi planejada em cada detalhe para que você consiga 
-                    desenvolver essa aplicação junto a nossa equipe.
-                </p>
-            </div>
-            <div id="imgAbout">
-                <img src="./image/about.png" alt="img about"/>
-            </div>
-        </div>
-    </section>
-    <section id="comprar">
-        <div id="compraConteudo">
-            
-        </div>
-        <div id="txtCompraConteudo">
-            <p id="txtCompra">
-                este conteúdo de alta qualidade, e 
-                exclusivo encontra-se disponível 
-                através da plataforma kiwify com um preço imperdível 
-                de R$450 por apenas R$200,00
+    <!-- Corpo da página -->
+    <h1>Criando uma Casa De Apostas Com JavaScript</h1>
+    <section id="top">
+        <div id="curso">
+            <br/><br/>
+            <h2>O que você vai aprender:</h2>
+            <p>
+                *Criar Um projeto ReactJs Do zero<br/>
+                *Componentização com ReactJs<br/>
+                *Responsividade com CSS3 <br/>
+                *Manipulação de elementos com JavaScript<br/>
+                *Conceitos avançados sobre criação de jogos<br/>
+                *Preparar a aplicação front-end para comunicarr-se com o servidor através de request.
             </p>
-            <button onclick="Curso()" id="btnHome">Adquirir O Curso</button>
-            <br/>
-            .
+        </div>
+        <div id="logonode">
+            <img src="./image/Roulette.webp" alt="logo nodejs"/>
         </div>
     </section>
+    <section id="meio">
+        <div id="porque">
+            <h2>Por que escolher nosso curso?</h2>
+            <p>
+                Abordagem Prática: Aprenda fazendo! Desenvolva uma aplicação real desde o início.
+                <br/>Projetado para Iniciantes: Sem jargões complicados, sem confusões. Um guia passo a passo para quem está dando os primeiros passos na programação.
+                <br/>Projeto: Desenvolva um projeto do total zero para colocar no seu portfolio.
+            </p>
+        </div>
+        <div id="destaque">
+            <h2>Destaque-se na Indústria Tech! </h2>
+            <p>
+                dê o primeiro passo para uma carreira empolgante no desenvolvimento de software!
+            </p>
+        </div>
+    </section>
+    <section id="T">
+        <div class="background-img">
+            <div class="overlay-text">
+                <p id="PP"><em>Você está pronto para transformar seu interesse em programação em habilidades práticas?</em></p>
+                <p><strong>Faça parte da próxima geração de desenvolvedores web! 🌐🖥️</strong></p>
+                <a target="_blank" href="https://pay.kiwify.com.br/35aNl2k" class="btn-inscreva-se">Adquira o nosso curso</a>
+            </div>
+        </div>
+    </section>
+    <!-- Rodapé -->
+    <footer>
+        <div class="footer-right">
+            <br/>
+            © 2024 <VmSoftware/>. Todos os direitos reservados.
+            <br/>
+            <br/>
+            <a href="https://www.instagram.com/vm_software/" target="_blank"><img src="./image/instagram.png" alt="logo"/></a>
+            <a href="#" target="_blank"><img src="./image/facebook.png" alt="logo"/></a>
+        </div>
+    </footer>
 </body>
 </html>
+
